# orc

./: .htaccess  Cargo.toml  DEPLOYMENT.md  README.md  SECURITY.md  go.mod
cmd/server/: main.go
config/: config.php
configs/: theme.json  torrc
data/: orc.db-shm  orc.db-wal
internal/auth/: auth.go
internal/database/: models.go
internal/handlers/: admin.go  comments.go  handlers.go
internal/security/: security.go
internal/theme/: theme.go
php/: index.php
php/includes/: auth.php  create_comment.php  create_post.php  database.php  link_preview.php  security.php  theme.php  utils.php
php/templates/: base.php  home.php  home_content.php  login.php  login_content.php  signup.php  signup_content.php
services/: orc-social.service
src/: config.rs  main.rs  security.rs  tor.rs
src/net/: http.rs  mod.rs  tcp.rs
web/static/css/: tailwind.base.css  theme-vars.css
web/static/js/: app.js
web/templates/: admin.html  base.html  home.html  login.html  profile.html  signup.html
web/templates/admin/: theme.html
