[package]
name = "orc"
version = "0.1.0"
edition = "2021"
description = "A lean, cross-platform terminal client that routes traffic through Tor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ugm616/orc"
authors = ["ugm616"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["socks", "rustls-tls"], default-features = false }
crossterm = "0.27"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
tokio-socks = "0.5"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
url = "2.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true